@@ -3,11 +3,17 @@ For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2022-05-21:
+
+- Fixed a bug, present since the beginning of ksh93, that broke backslash line
+  continuation within $(standard) and ${ shared-state; } command substitutions.
+  Thanks to atheik for the analysis and the fix. (BUG_CSUBLNCONT)
+
 2022-05-20:
 
 - Fixed an ancient bug that caused a spurious syntax error when using double
   quotes within a `backtick` command substitution within double quotes.
-  Thanks to atheik for the analysis and the fix.
+  Thanks to atheik for the analysis and the fix. (BUG_CSUBBTQUOT)
 
 2022-03-10:
 
